fixing some spacing

--- a/Projects/style-sports.css
+++ b/Projects/style-sports.css
@@ -68,9 +68,10 @@ main h3 {
 .photo {
     display: flex;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     padding: 40px 0px 0px 0px;
-    width: 100%;
-    height: auto;
+    width: 85%;
 }
 
 #sport {
@@ -117,8 +118,10 @@ main h3 {
     }
 
     .photo {
-        width: 450px;
-        height: 300px;
+        display: flex;
+        justify-content: center;
+        width: 510px;
+        height: 340px;
     }
 
 }
