--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ main {
 .about-me-container {
     display: flex;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .about-me-text-container {
@@ -80,6 +81,7 @@ main {
 #more-about-text {
     display: none;
     margin: 50px 0px;
+    text-align: justify;
 }
 
 #more-about-text img {
@@ -99,13 +101,17 @@ main h3 {
     margin: 0px 30px 0px 30px;
 }
 
+#skills {
+    margin-top: 40px;
+}
+
 .skills {
     display: flex;
     list-style-type: none;
     padding: 0;
     align-items: center;
     justify-content: space-around;
-    margin: 0;
+    margin: 0px;
     margin-left: auto;
 }
 
